1. Updated collection defaults to use the default layout (which includes our custom header)   2. Changed collection index files to use layout: default   3. Enhanced the default layout to show page titles properly
  Now all pages (including Tutorials and API Reference) should show the complete navigation bar with all 5 items:
  - Home
  - About
  - Tutorials
  - API Reference
  - GitHub

--- a/_config.yml
+++ b/_config.yml
@@ -38,12 +38,17 @@ defaults:
       path: ""
       type: "tutorials"
     values:
-      layout: "page"
+      layout: "default"
   - scope:
       path: ""
       type: "api"
     values:
-      layout: "page"
+      layout: "default"
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
 
 # Site settings
 author: Your Name
