--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        cuda-version: ['11.8.0', '12.8.0']
+        cuda-version: ['11.8.0', '12.0.0']
         cmake-version: ['3.16', '3.24']
 
     steps:
@@ -26,9 +26,10 @@ jobs:
           python3 -m pip install pybind11
 
       - name: Setup CUDA
-        uses: Jimver/cuda-toolkit@v0.2.11
+        uses: Jimver/cuda-toolkit@v0.2.16
         with:
           cuda: ${{ matrix.cuda-version }}
+          method: network
 
       - name: Setup CMake
         uses: jwlawson/actions-setup-cmake@v1.13
@@ -66,9 +67,10 @@ jobs:
           python3 -m pip install pybind11
 
       - name: Setup CUDA
-        uses: Jimver/cuda-toolkit@v0.2.11
+        uses: Jimver/cuda-toolkit@v0.2.16
         with:
           cuda: '11.8.0'
+          method: network
 
       - name: Build with GUI
         run: |
