--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y qt6-base-dev qt6-tools-dev build-essential libomp-dev python3-dev
+          sudo apt-get install -y qt6-base-dev qt6-tools-dev build-essential libomp-dev python3-dev pybind11-dev python3-pybind11 python3-pybindgen
           python3 -m pip install pybind11
 
       - name: Setup CUDA
