Implement CUDA performance optimizations
  - Add unified memory management with cudaMallocManaged
  - Implement memory pools for efficient allocation/deallocation
  - Add CUDA streams for CPU-GPU overlap
  - Integrate NVIDIA Nsight profiling markers
  - Optimize kernel launch parameters and memory coalescing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ target_link_libraries(CuSAXS
         CUDA::cufft
         CUDA::cublas
         CUDA::cudart
+        CUDA::nvtx3
         fmt::fmt
         Python3::Python
         pybind11::module
